tweet lanes supports app.net now

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <div class="media-Text">
               <h2 class="eps">Tweet Lanes</h2>
               <p>
-                Tweet Lanes is a user friendly Twitter client with lots of functions
+                Tweet Lanes is a user friendly Twitter and App.net client with lots of functions
               </p>
               <ul>
                 <li>Price: Free</li>
