xabber image fix

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="xabber.png" alt="Xabber" class="floss" />
+                <img src="img/foss/xabber.png" alt="Xabber" class="floss" />
               </a>
             </div>
             <div class="media-Text">
