Changed e-mail to email for consistency.

--- a/index.html
+++ b/index.html
@@ -1774,7 +1774,7 @@
               <div class="media-Text">
                 <h2 class="eps">Prey</h2>
                 <p>
-                  Prey tracks your stolen phone/tablet and gives you full control over it like camera, GPS, SMS, e-mail etc
+                  Prey tracks your stolen phone/tablet and gives you full control over it like camera, GPS, SMS, email etc
                 </p>
                 <ul>
                   <li>Price: Free </li>
