--- a/support.html
+++ b/support.html
@@ -28,7 +28,7 @@
      <script id='flattrbtn'>(function(i){var f,s=document.getElementById(i);f=document.createElement('iframe');f.src='//api.flattr.com/button/view/?uid=repat&button=compact&url='+encodeURIComponent(document.URL);f.title='Flattr';f.height=20;f.width=110;f.style.borderWidth=0;s.parentNode.insertBefore(f,s);})('flattrbtn');</script>
      </p>
       <p><a class="coinbase-button" data-code="05839045d4b044406d8c387be73c7681" data-button-style="donation_small" href="https://coinbase.com/checkouts/05839045d4b044406d8c387be73c7681">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script></p>
-      <p>droi<a href="http://www.google.com/recaptcha/mailhide/d?k=01EETeR_a0xkPKgFHu-BZsyg==&amp;c=3BDblcAhTutl4E6k9Ho0BnTKRsthjIjkBBIN_RBExC4=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501EETeR_a0xkPKgFHu-BZsyg\75\75\46c\0753BDblcAhTutl4E6k9Ho0BnTKRsthjIjkBBIN_RBExC4\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@repat.de</p>
+      <p>droi<a href="http://www.google.com/recaptcha/mailhide/d?k=01EETeR_a0xkPKgFHu-BZsyg==&amp;c=3BDblcAhTutl4E6k9Ho0BnTKRsthjIjkBBIN_RBExC4=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501EETeR_a0xkPKgFHu-BZsyg\75\75\46c\0753BDblcAhTutl4E6k9Ho0BnTKRsthjIjkBBIN_RBExC4\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this email address">...</a>@repat.de</p>
     </div>
      <!-- Footer -->
     <footer>
