Fixed broken path to Facebook Messenger logo.

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
           <ul class="proprietary">
             <li><img src="img/proprietary/whatsapp.png" alt="WhatsApp" class="proprietary" /><br />WhatsApp</li>
             <li><img src="img/proprietary/viber.png" alt="Viber" class="proprietary" /><br />Viber</li>
-            <li><img src="facebookmessenger.png" alt="Facebook Messenger" class="proprietary" /><br />Facebook Messenger</li>
+            <li><img src="img/proprietary/facebookmessenger.png" alt="Facebook Messenger" class="proprietary" /><br />Facebook Messenger</li>
             <li><img src="img/proprietary/icq.png" alt="ICQ" class="proprietary" /><br />ICQ</li>
             <li><img src="img/proprietary/kik.png" alt="Kik" class="proprietary" /><br />Kik</li>
             <li><img src="img/proprietary/yahoomessenger.png" alt="Yahoo Messenger" class="proprietary" /><br />Yahoo Messenger</li>
