Added link to lutic.org to credits.html

--- a/credits.html
+++ b/credits.html
@@ -38,7 +38,7 @@
         <td>Matthias for <a href="http://droid-break.info/#navigation">Navit</a></td>        
       </tr>
       <tr>
-        <td>LumenTeun for <a href="http://droid-break.info/#audio">VLC</a>, <a href="http://droid-break.info/#notes">Tomdroid</a>, <a href="http://droid-break.info/#browser">Firefox(download fix)</a>, the <a href="https://github.com/LumenTeun/droid-break/tree/rewrite">rewrite of HTML/CSS</a>, the <a href="https://github.com/LumenTeun/droid-break/tree/qrcodes">QR-codes</a> and countless pull requests!
+        <td><a href="http://lutic.org/">LumenTeun</a> for <a href="http://droid-break.info/#audio">VLC</a>, <a href="http://droid-break.info/#notes">Tomdroid</a>, <a href="http://droid-break.info/#browser">Firefox(download fix)</a>, the <a href="https://github.com/LumenTeun/droid-break/tree/rewrite">rewrite of HTML/CSS</a>, the <a href="https://github.com/LumenTeun/droid-break/tree/qrcodes">QR-codes</a> and countless pull requests!
         
         </td>        
       </tr>
