Add VPN Clients section

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <li><a href="#keyboards">Keyboards</a></li>
         <li><a href="#cloud">Cloud</a></li>
         <li><a href="#office">Office</a></li>
+        <li><a href="#vpnclients">VPN Clients</a></li>
         <li><a href="#misc">Misc</a></li>
       </ul>
     </nav>
@@ -1667,6 +1668,85 @@
         </tr>
       </table>
       <!-- End Office -->
+
+      <!-- Start VPNClients -->
+      <h2><a id="vpnclients">VPN Clients</a><a href="#top" class="topLink">^</a></h2>
+      <table>
+        <tr>
+          <th>Proprietary</th>
+          <th>Free alternative</th>
+          <th>Notes</th>
+        </tr>
+
+        <tr>
+          <!-- VPNClients:Proprietary -->
+          <td class="proprietary">
+            <ul class="proprietary">
+              <li><img src="img/proprietary/anyconnect.png" alt="AnyConnect" class="proprietary" /><br />Cisco AnyConnect</li>
+              <li><img src="img/proprietary/openvpn-connect.png" alt="OpenVPN Connect" class="proprietary" /><br />OpenVPN Connect</li>
+              <li><img src="img/proprietary/pia.png" alt="Private Internet Access" class="proprietary" /><br />Private Internet Access</li>
+            </ul>
+          </td>
+
+          <!-- VPNClients:Free alternative -->
+          <td>
+
+            <!-- OpenConnect -->
+            <div class="media emph-Block">
+              <div class="media-Object">
+                <a href="#!" class="pic-Rounded">
+                  <img src="img/foss/openconnect.png" alt="OpenConnect" class="floss" />
+                </a>
+              </div>
+              <div class="media-Text">
+                <h2 class="eps">OpenConnect</h2>
+                <p>
+                  SSL VPN client compatible with traditional Cisco AnyConnect gateways and with <a href="http://www.infradead.org/ocserv/">ocserv</a>.
+                </p>
+                <ul>
+                  <li>Price: Free </li>
+                  <li>Min. Android version: 4.0</li>
+                  <li><a href="https://github.com/cernekee/ics-openconnect">Source code</a></li>
+                </ul>
+                <hr>
+                <a href="https://play.google.com/store/apps/details?id=app.openconnect" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+                <a href="https://f-droid.org/repository/browse/?fdid=app.openconnect" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="openconnect" />
+              </div>
+            </div>
+
+            <!-- OpenVPN for Android -->
+            <div class="media emph-Block">
+              <div class="media-Object">
+                <a href="#!" class="pic-Rounded">
+                  <img src="img/foss/ics-openvpn.png" alt="OpenVPN for Android" class="floss" />
+                </a>
+              </div>
+              <div class="media-Text">
+                <h2 class="eps">OpenVPN for Android</h2>
+                <p>
+                  Connects to any OpenVPN gateway that uses tun mode.  No root required.
+                </p>
+                <ul>
+                  <li>Price: Free </li>
+                  <li>Min. Android version: 4.0</li>
+                  <li><a href="https://code.google.com/p/ics-openvpn/">Source code</a></li>
+                </ul>
+                <hr>
+                <a href="https://play.google.com/store/apps/details?id=de.blinkt.openvpn" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+                <a href="https://f-droid.org/repository/browse/?fdid=de.blinkt.openvpn" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="ics-openvpn" />
+              </div>
+            </div>
+
+          </td>
+
+          <!-- VPNClients:Notes -->
+          <td class="notes">
+          </td>
+        </tr>
+      </table>
+      <!-- End VPNClients -->
 
       <!-- Start Misc -->
       <h2><a id="misc">Misc</a><a href="#top" class="topLink">^</a></h2>
