Fix absolute URL on MuPDF icon

--- a/index.html
+++ b/index.html
@@ -1561,7 +1561,7 @@
             <div class="media emph-Block">
               <div class="media-Object">
                 <a href="#!" class="pic-Rounded">
-                  <img src="/img/foss/mupdf.png" alt="mupdf" class="floss" />
+                  <img src="img/foss/mupdf.png" alt="mupdf" class="floss" />
                 </a>
               </div>
               <div class="media-Text">
