Changed hyperlinks to point to new repo.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       We want to show you <em>high quality alternatives</em> to the big proprietary solutions.<br />
       Please note that open source apps don't guarantee absolute freedom, e.g., an open source Twitter client still sends everything to Twitters' servers.<br />
       Anyway, we believe it's the best we can come up with and that in many cases it's the better choice.<br />
-      If you think an app is missing please write an <a href="support.html">email</a>, a <a href="https://twitter.com/droidbreak" target="_blank">tweet</a>, a <a href="#disqus">Disqus</a> comment, or fork the project on <a href="https://github.com/repat/droid-break" target="_blank">GitHub</a> and make a pull request.<br />
+      If you think an app is missing please write an <a href="support.html">email</a>, a <a href="https://twitter.com/droidbreak" target="_blank">tweet</a>, a <a href="#disqus">Disqus</a> comment, or fork the project on <a href="https://github.com/droidbreak/droidbreak.github.io" target="_blank">GitHub</a> and make a pull request.<br />
     </p>
     <p>
       You will find most of these apps in the <a href="https://f-droid.org/" target="_blank">F-Droid</a> repository.
@@ -1872,7 +1872,7 @@
     <a href="https://twitter.com/droidbreak" target="_blank">
       <i class="fa fa-twitter"></i>
     </a>
-    <a href="https://github.com/repat/droid-break" target="_blank">
+    <a href="https://github.com/droidbreak/droidbreak.github.io" target="_blank">
       <i class="fa fa-github"></i>
     </a>
   </p>
