--- a/support.html
+++ b/support.html
@@ -21,7 +21,7 @@
       <p>
         I moderate this page in my spare time. Since it was generously hosted for free on <a href="http://neocities.org">neocities.org</a> and is now on <a href="pages.github.com">GitHub Pages</a>, I don't have to pay for a server. <br />
         The domain is only a couple of Euros, so this is more of a hat to flip a coin in. If you want, you can flattr me or send me bitcoins.<br />
-        Of course, you can also write an email, a <a href="https://twitter.com/droidbreak">tweet</a>, a <a href="http://droid-break.info/#disqus">disqus</a> comment or fork the project on <a href="https://github.com/repat/droid-break">GitHub</a> and make a pull request :-)<br />
+        Of course, you can also write an email, a <a href="https://twitter.com/droidbreak">tweet</a>, a <a href="http://droid-break.info/#disqus">disqus</a> comment or fork the project on <a href="https://github.com/droidbreak/droidbreak.github.io">GitHub</a> and make a pull request :-)<br />
       </p>
       
       <p>
