--- a/index.html
+++ b/index.html
@@ -144,6 +144,30 @@
             </div>
           </div>
 
+          <!-- Lightning Browser -->
+          <div class="media emph-Block">
+            <div class="media-Object">
+              <a href="#!" class="pic-Rounded">
+                <img src="img/foss/lightningbrowser.png" alt="Lightning Browser" class="floss" />
+              </a>
+            </div>
+            <div class="media-Text">
+              <h2 class="eps">Lightning Browser</h2>
+              <p>
+                A speedy, lightweight browser with modern navigation.
+              </p>
+              <ul>
+                <li>Price: Free (Pro version $1.50 on Google Play or free fron F-Droid)</li>
+                <li>Min. Android version: varies</li>
+                <li><a href="https://github.com/anthonycr/Lightning-Browser" target="_blank">Source code</a></li>
+              </ul>
+              <hr>
+              <a href="https://play.google.com/store/apps/details?id=acr.browser.barebones" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdfilter=light&fdid=acr.browser.lightning" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+              <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="lightningbrowser" />
+            </div>
+          </div>
+
           <!-- Tint -->
           <div class="media emph-Block">
             <div class="media-Object">
