--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 A speedy, lightweight browser with modern navigation.
               </p>
               <ul>
-                <li>Price: Free (Pro version $1.50 on Google Play or free fron F-Droid)</li>
+                <li>Price: Free (Pro version $1.50 on Google Play or free on F-Droid)</li>
                 <li>Min. Android version: varies</li>
                 <li><a href="https://github.com/anthonycr/Lightning-Browser" target="_blank">Source code</a></li>
               </ul>
