minor change. new icons

--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@
             <li><img src="img/proprietary/kik.png" alt="Kik" class="proprietary" /><br />Kik</li>
             <li><img src="img/proprietary/yahoomessenger.png" alt="Yahoo Messenger" class="proprietary" /><br />Yahoo Messenger</li>
             <li><img src="img/proprietary/ebuddy.png" alt="eBuddy" class="proprietary" /><br />eBuddy</li>
+            <li><img src="img/proprietary/threema.png" alt="Threema" class="proprietary" /><br />Threema</li>
           </ul>
         </td>
 
@@ -519,7 +520,7 @@
             <div class="media-Text">
               <h2 class="eps">Telegram</h2>
               <p>
-                Telegram is an unencrypted messenger just like Whatsapp but supports encryption when both participants are online. It also has all the other things you would want from a messenger like group chats and photo/video sharing .
+                Telegram is an unencrypted messenger just like Whatsapp but supports encryption when both participants are online. It also has all the other things you would want from a messenger like group chats and photo/video sharing.
               </p>
               <ul>
                 <li>Price: Free</li>
@@ -587,7 +588,7 @@
               <div class="media-Text">
                 <h2 class="eps">RedPhone</h2>
                 <p>
-                  RedPhone uses end-to-end encryption and their own network. Very easy to use. Requires to sign up.
+                  RedPhone uses end-to-end encryption and their own network. Very easy to use. Requires to sign up. The iOS version is called <a href="https://itunes.apple.com/de/app/signal-private-messenger/id874139669?mt=8">Signal</a>
                 </p>
                 <ul>
                   <li>Price: Free</li>
@@ -1496,7 +1497,7 @@
             <ul class="proprietary">
               <li><img src="img/proprietary/dropbox.png" alt="Dropbox" class="proprietary" /><br />Dropbox</li>
               <li><img src="img/proprietary/googledrive.png" alt="Google Drive" class="proprietary" /><br />Google Drive</li>
-              <li><img src="img/proprietary/skydrive.png" alt="Sky Drive" class="proprietary" /><br />Sky Drive</li>
+              <li><img src="img/proprietary/onedrive.png" alt="OneDrive" class="proprietary" /><br />OneDrive</li>
               <li><img src="img/proprietary/mega.png" alt="Mega" class="proprietary" /><br />Mega</li>
             </ul>
           </td>
