general update. new foss icons

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             <div class="media-Text">
               <h2 class="eps">AndStatus</h2>
               <p>
-                AndStatus is a very lightweight Twitter and <a href="http://status.net/" target="_blank">StatusNet</a>/<a href="http://www.gnu.org/software/social/" target="_blank">GNU social</a> client that derived from AndTweet. It does not work with identi.ca anymore.
+                AndStatus is a very lightweight and low traffic Twitter, <a href="http://status.net/" target="_blank">StatusNet</a>/<a href="http://www.gnu.org/software/social/" target="_blank">GNU social</a>, as well as pump.io client that derived from AndTweet. It does not work with identi.ca anymore.
               </p>
               <ul>
                 <li>Price: Free</li>
@@ -588,7 +588,7 @@
               <div class="media-Text">
                 <h2 class="eps">RedPhone</h2>
                 <p>
-                  RedPhone uses end-to-end encryption and their own network. Very easy to use. Requires to sign up. The iOS version is called <a href="https://itunes.apple.com/de/app/signal-private-messenger/id874139669?mt=8">Signal</a>
+                  RedPhone uses end-to-end encryption and their own network. Very easy to use. Requires to sign up. The iOS version is called <a href="https://itunes.apple.com/de/app/signal-private-messenger/id874139669?mt=8">Signal</a>.
                 </p>
                 <ul>
                   <li>Price: Free</li>
@@ -720,18 +720,18 @@
                 </a>
               </div>
               <div class="media-Text">
-                <h2 class="eps">Vanilla Music</h2>
+                <h2 class="eps">SmartVanilla Musik</h2>
                 <p>
-                  Vanilla Music player is a simple but yet sufficient player for mp3, ogg, flac and pcm files. It also supports tags and folders. It's a rewrite of the abadoned original Vanilla Player.
+                  SmartVanilla Musik player is a simple but yet sufficient player for mp3, ogg, flac and pcm files. It also supports tags and folders. It's the current fork of the abadoned original Vanilla Player. It recently started supporting smartwatches.
                 </p>
                 <ul>
                   <li>Price: Free</li>
                   <li>Min. Android version: 4.0.3</li>
-                  <li><a href="https://github.com/adrian-bl/vanilla">Source code</a></li>
+                  <li><a href="https://github.com/gordon01/vanilla">Source code</a></li>
                 </ul>
                 <hr>
-                <a href="https://play.google.com/store/apps/details?id=ch.blinkenlights.android.vanilla" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
-                <a href="https://f-droid.org/repository/browse/?fdid=ch.blinkenlights.android.vanilla" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+                <a href="https://play.google.com/store/apps/details?id=su.thinkdifferent.vanilla" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+                <a href="https://f-droid.org/repository/browse/?fdid=ch.blinkenlights.android.vanilla" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" />(other fork)</a>
                 <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="vanillamusic" />
 
               </div>
@@ -760,27 +760,26 @@
               </div>
             </div>
 
-            <!-- AndLess -->
+            <!-- Turtleplayer -->
             <div class="media emph-Block">
               <div class="media-Object">
                 <a href="#!" class="pic-Rounded">
-                  <img src="img/foss/andless.png" alt="andless" class="floss" />
+                  <img src="img/foss/turtleplayer.png" alt="Turtle Player" class="floss" />
                 </a>
               </div>
               <div class="media-Text">
-                <h2 class="eps">andLess</h2>
+                <h2 class="eps">Turtle Player</h2>
                 <p>
-                  andLess plays lossless files(flac, ape, mpc, wv, Apple(.m4a)).
+                  Turtle player is a minimalistic music player.
                 </p>
                 <ul>
                   <li>Price: Free</li>
-                  <li>Min. Android version: 1.5</li>
-                  <li><a href="http://code.google.com/p/andless/">Source code</a></li>
+                  <li>Min. Android version: 2.3.3</li>
+                  <li><a href="https://github.com/eddturtle/TurtlePlayer">Source code</a></li>
                 </ul>
                 <hr>
-                <a href="https://play.google.com/store/apps/details?id=net.avs234" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
-                <a href="https://f-droid.org/repository/browse/?fdid=net.avs234" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
-                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="andless" />
+                <a href="https://play.google.com/store/apps/details?id=com.turtleplayerv2" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="turtle" />
               </div>
             </div>
 
@@ -795,8 +794,7 @@
               <div class="media-Text">
                 <h2 class="eps">VLC</h2>
                 <p>
-                  VLC is a well known media player.<br />
-                  It is still in early beta, but playback works fine.
+                  VLC is a well known media player. It is still in early beta, but playback works fine. It's also one of the few players that already play the new <a href="https://en.wikipedia.org/wiki/Opus_(audio_format)">opus</a> audio format.
                 </p>
                 <ul>
                   <li>Price: Free</li>
@@ -842,7 +840,6 @@
 
           <!-- Audio:Notes -->
           <td class="notes">
-            We are still missing some good alternatives here. Know any? Write an <a href="support.html">email or fork the project on GitHub</a> and add your favourite FOSS audio player via pull-request. 
           </td>
         </tr>
       </table>
@@ -1110,22 +1107,22 @@
             </div>
 
 
-            <!-- FeedEx -->
+            <!-- Flym -->
             <div class="media emph-Block">
               <div class="media-Object">
                 <a href="#!" class="pic-Rounded">
-                  <img src="img/foss/feedex.png" alt="feedex" class="floss" />
+                  <img src="img/foss/flym.png" alt="Flym" class="floss" />
                 </a>
               </div>
               <div class="media-Text">
-                <h2 class="eps">FeedEx</h2>
+                <h2 class="eps">Flym</h2>
                 <p>
-                  FeedEx is a light RSS/ATOM-reader that doesn't synchronize with an online feed reader (unlike ownCloud News Reader). It's based on SparseRSS.
+                  Flym is a light RSS/ATOM-reader that doesn't synchronize with an online feed reader (unlike ownCloud News Reader). It's based on SparseRSS.
                 </p>
                 <ul>
                   <li>Price: Free</li>
                   <li>Min. Android version: 4.0.3</li>
-                  <li><a href="https://github.com/HoloAddict/FeedEx">Source code</a></li>
+                  <li><a href="https://github.com/FredJul/Flym">Source code</a></li>
                 </ul>
                 <hr>
                 <a href="https://play.google.com/store/apps/details?id=net.fred.feedex" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
