jams music player

--- a/index.html
+++ b/index.html
@@ -737,6 +737,29 @@
               </div>
             </div>
 
+            <!-- Jams Music Player -->
+            <div class="media emph-Block">
+              <div class="media-Object">
+                <a href="#!" class="pic-Rounded">
+                  <img src="img/foss/jams.png" alt="Jams Music Player" class="floss" />
+                </a>
+              </div>
+              <div class="media-Text">
+                <h2 class="eps">Jams Music Player</h2>
+                <p>
+                  Jams Music Player is an elegant and powerful music player. Itused to be a paid, proprietary app but the developer decided to open-source it. This is the free compiled GitHub version.
+                </p>
+                <ul>
+                  <li>Price: Free</li>
+                  <li>Min. Android version: 2.3.3</li>
+                  <li><a href="https://github.com/psaravan/JamsMusicPlayer">Source code</a></li>
+                </ul>
+                <hr>
+                <a href="https://play.google.com/store/apps/details?id=com.jams.music.player.de.repat" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+                <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="jams" />
+              </div>
+            </div>
+
             <!-- Music Player -->
             <div class="media emph-Block">
               <div class="media-Object">
