Strict HTML (like XML) in head tag of index.html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <title>
     Droid-Break.info - High quality alternative Android apps
   </title>
+  
   <!-- Metadata -->
-  <meta charset="utf-8">
-  <meta name="description" content="Droid-Break offers a list of free high-quality alternatives to proprietary Android apps.">
+  <meta charset="utf-8" />
+  <meta name="description" content="Droid-Break offers a list of free high-quality alternatives to proprietary Android apps." />
   <meta name="keywords" content="android,alternative,apps,free,foss,open source,prism-break" />
-  <meta name="robots" content="index, follow">
-  <link rel="shortcut icon" href="favicon.ico">
+  <meta name="robots" content="index, follow" />
+  <link rel="icon" href="favicon.ico" />
+  <link rel="shortcut icon" href="favicon.ico" />
 
   <!-- Opengraph -->
   <meta property="og:title" content="Droid-Break" />
@@ -17,7 +19,7 @@
   <meta property="og:image" content="http://droid-break.info/img/misc/droidbreak-logo-big.png" />
   <meta property="og:url" content="http://droid-break.info/" />
   <meta property="og:locale" content="en_US" />
-  <meta property="og:site_name" content="Droid-Break.info - A list of free high quality alternatives to proprietary android apps"/>
+  <meta property="og:site_name" content="Droid-Break.info - A list of free high quality alternatives to proprietary android apps" />
   <meta property="og:description" content="Droid-Break offers a list of free high-quality alternatives to proprietary Android apps." />
 
   <!-- CSS -->
@@ -2010,7 +2012,7 @@
     <a href="http://pages.github.com" title="GitHub Pages">
       GitHub Pages
     </a>
-    - Last update: 17 December 2014, 00:24
+    - Last update: 28 December 2014, 14:00
   </p>
   <p>
     Logos and images are trademarked by their respective companies.
