Better licensing information

--- a/index.html
+++ b/index.html
@@ -2002,7 +2002,7 @@
     </a>
   </p>
   <p>
-    CC-BY-SA 2013-2014 by 
+    <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons BY-<abbr title="ShareAlike">SA</abbr></a> 2013-2014 by
     <a href="http://repat.de" target="_blank">
       repat
     </a>
@@ -2010,10 +2010,10 @@
     <a href="http://pages.github.com" title="GitHub Pages">
       GitHub Pages
     </a>
-    - Last update: 17 December 2014, 00:24
+    - Last update: 28 December 2014, 14:30
   </p>
   <p>
-    Logos and images are trademarked by their respective companies.
+    Logos and images can be under copyright and trademarked of their respective companies.
   </p>
 </footer>
 </body>
