--- a/links-to-other-projects.html
+++ b/links-to-other-projects.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+    <meta charset="utf-8" />
     <title>
       Links to other projects
     </title>
     
     <!-- Let the browser know that it has to scale your webpage appropriately on every device -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
   </head>
   <body>
     <ul>
