--- a/support.html
+++ b/support.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+    <meta charset="utf-8" />
     <title>
       Support - droid-break.info
     </title>  
@@ -36,7 +36,8 @@
         <a href="/">Home</a> - <a href="about.html">About</a> - <a href="support.html">Support</a>
       </p>
       <p>
-        CC-BY-SA 2013-2014 by <a href="http://repat.de">repat</a> - Last update: 17. March 2014, 01:45
+        <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons BY-<abbr title="ShareAlike">SA</abbr></a> by <a href="http://repat.de">repat</a>
+        - Last update: 17. March 2014, 01:45
       </p>
     </footer>
   </body>
