&amp; at lightning browser

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               </ul>
               <hr>
               <a href="https://play.google.com/store/apps/details?id=acr.browser.barebones" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
-              <a href="https://f-droid.org/repository/browse/?fdfilter=light&fdid=acr.browser.lightning" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdfilter=light&amp;fdid=acr.browser.lightning" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
               <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="lightningbrowser" />
             </div>
           </div>
