--- a/index.html
+++ b/index.html
@@ -1732,6 +1732,7 @@
               <li><img src="img/proprietary/anyconnect.png" alt="AnyConnect" class="proprietary" /><br />Cisco AnyConnect</li>
               <li><img src="img/proprietary/openvpn-connect.png" alt="OpenVPN Connect" class="proprietary" /><br />OpenVPN Connect</li>
               <li><img src="img/proprietary/pia.png" alt="Private Internet Access" class="proprietary" /><br />Private Internet Access</li>
+              <li><img src="img/proprietary/hola.png" alt="Hola Free VPN" class="proprietary" /><br />Hola Free VPN</li>
             </ul>
           </td>
 
@@ -2004,7 +2005,7 @@
     </a>
   </p>
   <p>
-    <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons BY-<abbr title="ShareAlike">SA</abbr></a> 2013-2014 by
+    <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons BY-<abbr title="ShareAlike">SA</abbr></a> 2013-2015 by
     <a href="http://repat.de" target="_blank">
       repat
     </a>
@@ -2012,7 +2013,7 @@
     <a href="http://pages.github.com" title="GitHub Pages">
       GitHub Pages
     </a>
- Last update: 28 December 2014, 14:30
+ Last update: 10. January 2015, 14:42
   </p>
   <p>
     Logos and images can be under copyright and trademarked of their respective companies.
