--- a/sources.html
+++ b/sources.html
@@ -76,8 +76,8 @@
         <a href="/">Home</a> - <a href="about.html">About</a> - <a href="support.html">Support</a>
       </p>
       <p>
-        <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons BY-<abbr title="ShareAlike">SA</abbr></a> 2013-2014 by <a href="http://repat.de">repat</a>
-        - Last update: 17. March 2014, 01:45
+        <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons BY-<abbr title="ShareAlike">SA</abbr></a> 2013 - 2015 by <a href="http://repat.de">repat</a>
+        - Last update: 10. January 2015, 14:43
       </p>
     </footer>
   </body>
