--- a/credits.html
+++ b/credits.html
@@ -59,11 +59,11 @@
         <a href="/">Home</a> - <a href="about.html">About</a> - <a href="support.html">Support</a>
       </p>
       <p>
-        <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons BY-<abbr title="ShareAlike">SA</abbr></a> 2013-2014 by
+        <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons BY-<abbr title="ShareAlike">SA</abbr></a> 2013 - 2015 by
 		<a href="http://repat.de" target="_blank">
 		  repat
 		</a>
-		- Last update: 28. December 2014, 14:00
+		- Last update: 10. January 2015, 14:42
       </p>
     </footer>
   </body>
