--- a/index.html
+++ b/index.html
@@ -361,11 +361,11 @@
             <div class="media-Text">
               <h2 class="eps">AndStatus</h2>
               <p>
-                AndStatus is a very lightweight and low traffic Twitter, <a href="http://status.net/" target="_blank">StatusNet</a>/<a href="http://www.gnu.org/software/social/" target="_blank">GNU social</a>, as well as pump.io client that derived from AndTweet. It does not work with identi.ca anymore.
+                AndStatus is a very lightweight and low traffic Twitter, StatusNet/<a href="https://gnu.io/social/" target="_blank">GNU social</a> (e.g. <a href="http://quitter.se/" target="_blank">Quitter</a>, <a href="https://loadaverage.org/" target="_blank">LoadAverage</a> and <a href="https://status.vinilox.eu/" target="_blank">Vinilox</a>), as well as <a href="http://pump.io/" target="_blank">pump.io</a> client that derived from AndTweet.
               </p>
               <ul>
                 <li>Price: Free</li>
-                <li>Min. Android version: 1.6</li>
+                <li>Min. Android version: 4.1</li>
                 <li><a href="https://github.com/andstatus/andstatus" target="_blank">Source code</a></li>
               </ul>
               <hr>
