add F-Droid links
Linked to a few apps available on the F-Droid repo

--- a/index.html
+++ b/index.html
@@ -532,6 +532,7 @@
               </ul>
               <hr>
               <a href="https://play.google.com/store/apps/details?id=org.telegram.messenger" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse?fdid=org.telegram.messenger" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
               <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="telegram" />
 
             </div>
@@ -649,6 +650,7 @@
                 </ul>
                 <hr>
                 <a href="https://play.google.com/store/apps/details?id=com.csipsimple" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+                <a href="https://f-droid.org/repository/browse?fdid=com.csipsimple" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
                 <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="csipsimple" />
 
               </div>
@@ -1048,6 +1050,7 @@
                 </ul>
                 <hr>
                 <a href="https://play.google.com/store/apps/details?id=org.openintents.notepad" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+                <a href="https://f-droid.org/repository/browse?fdid=org.openintents.notepad" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
                 <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="oinotepad" />
               </div>
             </div>
@@ -1700,6 +1703,7 @@
                 </ul>
                 <hr>
                 <a href="https://play.google.com/store/apps/details?id=org.coolreader" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
+                <a href="https://f-droid.org/repository/browse?fdid=org.coolreader" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
                 <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="coolreader" />
 
               </div>
