--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
             <div class="media-Text">
               <h2 class="eps">TextSecure</h2>
               <p>
-                TextSecure supports push messages over the internet. They run their own server and the cryptography is based on the proven <a href="https://en.wikipedia.org/wiki/Off-the-Record_Messaging">OTR</a> and done by <a href="https://whispersystems.org/">specialists</a>. Group chat is supported and you can send media files. The iOS version is called <a href="https://itunes.apple.com/app/signal-private-messenger/id874139669/" target="_blank">Signal</a>
+                TextSecure supports push messages over the internet. They run their own server and the cryptography is based on the proven <a href="https://en.wikipedia.org/wiki/Off-the-Record_Messaging">OTR</a> and done by <a href="https://whispersystems.org/">specialists</a>. Group chat is supported and you can send media files. The iOS version is called <a href="https://itunes.apple.com/app/signal-private-messenger/id874139669/" target="_blank">Signal</a>.
               </p>
               <ul>
                 <li>Price: Free</li>
@@ -1424,7 +1424,7 @@
 
           <!-- Navigation:Notes -->
           <td class="notes">
-          You can help improve the quality of OpenStreetMap by registering an account and <a href="http://learnosm.org/en/beginner/" target="_blank">mapping your community</a>.
+          You can help improve the quality of OpenStreetMap by registering an account and <a href="http://learnosm.org/en/beginner/start-osm/" target="_blank">mapping your community</a>.
           </td>
         </tr>
       </table>
