--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
             <div class="media-Text">
               <h2 class="eps">TextSecure</h2>
               <p>
-                TextSecure supports push messages over the internet. They run their own server and the cryptography is based on the proven <a href="https://en.wikipedia.org/wiki/Off-the-Record_Messaging">OTR</a> and done by <a href="https://whispersystems.org/">specialists</a>. Group chat is supported and you can send media files. The iOS version is called <a href="https://itunes.apple.com/app/signal-private-messenger/id874139669/" target="_blank">Signal</a>.
+                TextSecure is an encrypted mobile messenger. They run their own server and the cryptography is based on the proven <a href="https://en.wikipedia.org/wiki/Off-the-Record_Messaging">OTR</a> and done by <a href="https://whispersystems.org/">specialists</a>. Group chat is supported and you can send media files. The iOS version is called <a href="https://itunes.apple.com/app/signal-private-messenger/id874139669/" target="_blank">Signal</a>.
               </p>
               <ul>
                 <li>Price: Free</li>
@@ -659,7 +659,7 @@
 
           <!-- VoIP:Notes -->
           <td class="notes">
-            RedPhone uses special infrastructure, for all other apps you need a SIP account. Have a look on <a href="https://en.wikipedia.org/wiki/SIP_provider" target="_blank">Wikipedia</a> to find a SIP-provider. <a href="https://ostel.co/" target="_blank">Ostel.co</a> is a free encrypted SIP service run by <a href="https://guardianproject.info/" target="_blank">The Guardian Project</a>.
+            RedPhone uses special infrastructure, for all other apps you need a SIP account. Have a look on <a href="https://en.wikipedia.org/wiki/SIP_provider" target="_blank">Wikipedia</a> to find a SIP-provider. <a href="https://ostel.co/" target="_blank">Ostel.co</a> is a free and easy to use SIP service run by <a href="https://guardianproject.info/" target="_blank">The Guardian Project</a>.
           </td>
         </tr>
       </table>
