--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
             Don't have a XMPP account yet? Have a look at the <a href="http://xmpp.net/" target="_blank">IM Observatory</a> and register one at a server of your choice.
           </p>
           <p>
-            <a href="https://en.wikipedia.org/wiki/Off-the-Record_Messaging" target="_blank">OTR</a> stands for off-the-record, a form of end-to-end encryption. End-to-end encryption ensures the only the person you're communicating with can decode your message. 
+            <a href="https://en.wikipedia.org/wiki/Off-the-Record_Messaging" target="_blank">OTR</a> stands for off-the-record, a form of end-to-end encryption. End-to-end encryption ensures that only the person with whom you're communicating can decode your message. 
           </p>
           <p>
             <a href="http://thoughtcrime.org/blog/telegram-crypto-challenge/">Be careful</a> with relying on Telegram's encryption as they are not end-to-end encrypted by default. All messages are stored on their servers except when using the "secret chat" option.
